Add number of intrinsic channels and planes
